# tp-animtoolkit-maya

./: LICENSE  MANIFEST.in  README.md  README.rst  package.yaml  requirements.txt  setup.cfg
tp/animtoolkit/maya/: __version__.py  _version.py
tp/animtoolkit/maya/core/: layereditor.py
tp/animtoolkit/maya/tools/animtoolbox/: abstract.py  api.py  consts.py  controller.py  model.py  tool.py  view.py  widgets.py
tp/animtoolkit/maya/tools/animtoolbox/plugins/: playblast.py
tp/animtoolkit/maya/tools/takesmanager/: layereditor.py  take.py  tool.py  view.py  widgets.py
tp/animtoolkit/startup/: animtoolkitmaya.py
